- modificare din enum in String pentru clasele Sos si SosFermentabil - actualizare cli pentru creeareKebap si creeareSos